<resources>
    <string name="app_name">Ismlar Ma\'nosi 2025</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked">Favorites</string>
    <string name="names_title">Names Meaning 2025</string>
    <string name="liked_title">Favorites</string>
    <string name="search">Search</string>
    <string name="could_not_find">Couldn\'t find your name?</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="share_the_app">Share the app</string>
    <string name="our_other_apps">Our other apps</string>
    <string name="change_language_style">Change app text language</string>
    <string name="lotincha">LATINCHA</string>
    <string name="kirilcha">КИРИЛЧА</string>
    <string name="english">ENGLISH</string>
    <string name="icon">icon</string>
    <string name="search_hint">Enter a name . . .</string>
    <string name="names_lw">Names</string>
    <string name="dilshodbek">Dilshodbek</string>
    <string name="succesfullyAdded">Successfully added!</string>
    <string name="liked_list_text">This is the place for your list of \'Favorite\' names. Start \'liking\' from the names of your loved ones!</string>
    <string name="not_found_name">Oops!! No such name was found!?</string>
    <string name="menu">Menu</string>
    <string name="image">image</string>
    <string name="update_available">Update available</string>
    <string name="update_now">Update now</string>
    <string name="a_new_version_is_available">A new version is available for free. \nUpdate to enjoy new features.</string>
    <string name="link_for_app">Link for the application:\n</string>
    <string name="share_with_frieds">Share with friends</string>
    <string name="wise_quotes">Wise Quotes</string>
    <string name="sample_word">A sample of wise words will be here\n</string>
    <string name="author_of_the_word">Author of the quote</string>
    <string name="ok">OK</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_info">
        \n The quotes and author names are for informational purposes only.
        \n We are not responsible for any inaccuracies.
        \n For corrections, contact :
        \n danmurphyy2022@gmail.com.
    </string>
    <string name="notification_permission_needed">Notification Permission Needed</string>
    <string name="receive_notifications">In order to receive notifications, please grant notification permission.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="download_now">Download now</string>
    <string name="an_app_is_available">🚀 New app, free for you! Download now and enjoy amazing features! 🎉</string>
    <string name="no_english_content">We apologize — English content will be available soon.</string>

</resources>